--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                     <div class="video-info">
                         <h3>HALLOWEEN CRINGE</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=qxRUIhJc09g" target="_blank">
-                    <img src="https://i.ytimg.com/vi/qxRUIhJc09g/mqdefault.jpg" alt="From Trash To BBQ Beast: Restoring an Ape Car For 365 Days!">
+                    <img src="https://i.ytimg.com/vi/qxRUIhJc09g/mqdefault.jpg" alt="1 Full Year To Build A Dream Food Cart - Hot Rod Smoker">
                     <div class="video-info">
-                        <h3>From Trash To BBQ Beast: Restoring an Ape Car For 365 Days!</h3>
+                        <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                         <div class="channel">Vito Iacopelli</div>
                         <div class="date">8 hours ago</div>
                     </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Maps a Person’s Chakras</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Why You Need to Be Bored</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Ramayana: Should Actors Live the Role? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Maps a Person’s Chakras</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Why You Need to Be Bored</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Ramayana: Should Actors Live the Role? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,9 +9391,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=qxRUIhJc09g" target="_blank">
-                        <img src="https://i.ytimg.com/vi/qxRUIhJc09g/mqdefault.jpg" alt="From Trash To BBQ Beast: Restoring an Ape Car For 365 Days!">
+                        <img src="https://i.ytimg.com/vi/qxRUIhJc09g/mqdefault.jpg" alt="1 Full Year To Build A Dream Food Cart - Hot Rod Smoker">
                         <div class="video-info">
-                            <h3>From Trash To BBQ Beast: Restoring an Ape Car For 365 Days!</h3>
+                            <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                             <div class="channel">Vito Iacopelli</div>
                             <div class="date">8 hours ago</div>
                         </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>HALLOWEEN CRINGE</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
