--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -152,9 +152,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=7DBgpgfNXWg" target="_blank">
-                    <img src="https://i.ytimg.com/vi/7DBgpgfNXWg/mqdefault.jpg" alt="I Stayed 24 Hours on a Japanese Island with Only 11 People">
+                    <img src="https://i.ytimg.com/vi/7DBgpgfNXWg/mqdefault.jpg" alt="What Life on a Japanese Island With Only 11 People is like">
                     <div class="video-info">
-                        <h3>I Stayed 24 Hours on a Japanese Island with Only 11 People</h3>
+                        <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
                         <div class="date">7 hours ago</div>
                     </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>HALLOWEEN CRINGE</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Ramayana: Should Actors Live the Role? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>The Best Milk Alternative | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>Ramayana: Should Actors Live the Role? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8151,7 +8151,7 @@
                         <div class="video-info">
                             <h3>The Best Milk Alternative | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,9 +10228,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=7DBgpgfNXWg" target="_blank">
-                        <img src="https://i.ytimg.com/vi/7DBgpgfNXWg/mqdefault.jpg" alt="I Stayed 24 Hours on a Japanese Island with Only 11 People">
+                        <img src="https://i.ytimg.com/vi/7DBgpgfNXWg/mqdefault.jpg" alt="What Life on a Japanese Island With Only 11 People is like">
                         <div class="video-info">
-                            <h3>I Stayed 24 Hours on a Japanese Island with Only 11 People</h3>
+                            <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
                             <div class="date">7 hours ago</div>
                         </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>HALLOWEEN CRINGE</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
