--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>HALLOWEEN CRINGE</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Why You Need to Be Bored</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -273,9 +273,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=U69ELSiZrdA" target="_blank">
-                    <img src="https://i.ytimg.com/vi/U69ELSiZrdA/mqdefault.jpg" alt="SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ">
+                    <img src="https://i.ytimg.com/vi/U69ELSiZrdA/mqdefault.jpg" alt="SIDEMEN VS WORLD'S HARDEST QUIZ">
                     <div class="video-info">
-                        <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
+                        <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Happiness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1663,7 +1663,7 @@
                     <div class="video-info">
                         <h3>Short Term Momentum Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -6227,7 +6227,7 @@
                         <div class="video-info">
                             <h3>Short Term Momentum Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Why You Need to Be Bored</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8107,7 +8107,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Happiness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8118,7 +8118,7 @@
                         <div class="video-info">
                             <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9461,7 +9461,7 @@
                         <div class="video-info">
                             <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>HALLOWEEN CRINGE</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,9 +10261,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=U69ELSiZrdA" target="_blank">
-                        <img src="https://i.ytimg.com/vi/U69ELSiZrdA/mqdefault.jpg" alt="SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ">
+                        <img src="https://i.ytimg.com/vi/U69ELSiZrdA/mqdefault.jpg" alt="SIDEMEN VS WORLD'S HARDEST QUIZ">
                         <div class="video-info">
-                            <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
+                            <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">Yesterday</div>
                         </div>
