--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">27 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>HALLOWEEN CRINGE</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>What Causes Relationship Insecurity? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7986,7 +7986,7 @@
                         <div class="video-info">
                             <h3>What Causes Relationship Insecurity? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">27 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>HALLOWEEN CRINGE</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
