--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Weirdos of Tinder #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">57 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -1619,7 +1619,7 @@
                     <div class="video-info">
                         <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -9549,7 +9549,7 @@
                         <div class="video-info">
                             <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Weirdos of Tinder #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">57 minutes ago</div>
                         </div>
                     </a>
                 </div>
