--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>At what temperature should pizza be cooked?</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">45 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>At what temperature should pizza be cooked?</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">45 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
