--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>At what temperature should pizza be cooked?</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Weirdos of Tinder #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Sadhguru rides to San Francisco for the ‘Ecstasy of Enlightenment’ program tomorrow, November 2.</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Uncensored</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Sadhguru rides to San Francisco for the ‘Ecstasy of Enlightenment’ program tomorrow, November 2.</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Uncensored</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>At what temperature should pizza be cooked?</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Weirdos of Tinder #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
